--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GUIFINANCE</title>
+    <!-- Favicon Customizado (G com Cifrão) -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none'><path d='M17.5 9.5C16.6 7.4 14.6 6 12 6C9 6 6.5 8.5 6.5 11.5C6.5 14.5 9 17 12 17C14.6 17 16.6 15.6 17.5 13.5' stroke='%2379e34c' stroke-width='2.8' stroke-linecap='round' stroke-linejoin='round' /><path d='M18 12H13' stroke='%2379e34c' stroke-width='2.8' stroke-linecap='round' stroke-linejoin='round' /><path d='M12 3V21' stroke='%2379e34c' stroke-width='2.8' stroke-linecap='round' /></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
